...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="@dimen/grid_layout_height_width"
            android:layout_height="@dimen/grid_layout_height_width"
            app:isLoading="@{viewModel.imagesUiState.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                    tools:ignore="IncludeLayoutParam" />

            </GridLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageGrid"
            android:layout_width="@dimen/grid_layout_height_width"
            android:layout_height="@dimen/grid_layout_height_width"
            android:padding="@dimen/image_grid_recycler_view_padding"
            android:transitionGroup="true"
            app:imageList="@{viewModel.imagesUiState.imageItems}"
            app:isVisible="@{viewModel.imagesUiState.imageItems.size()>0}"
...
